--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -17,6 +16,17 @@
     <title>React App</title>
   </head>
   <body>
+
+
+    <a-scene vr-mode-ui="enabled: false" embedded arjs="sourceType: webcam; debugUIEnabled: false;sourceWidth:360; sourceHeight:120; displayWidth: 360; displayHeight: 120;"> 
+      <a-entity scale="0.25 0.25 0.25" gltf-model="%PUBLIC_URL%/untitled.glb" modify-materials look-at="[gps-camera]"
+      gps-entity-place="latitude: 51.93354636; longitude: 6.65203426;"></a-entity>
+  
+      <a-camera gps-camera rotation-reader></a-camera>
+    </a-scene>
+
     <div id="root"></div>
+
+
   </body>
 </html>
