--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
@@ -16,17 +11,7 @@
     <title>React App</title>
   </head>
   <body>
-
-
-    <a-scene vr-mode-ui="enabled: false" embedded arjs="sourceType: webcam; debugUIEnabled: false;sourceWidth:360; sourceHeight:120; displayWidth: 360; displayHeight: 120;"> 
-      <a-entity scale="0.25 0.25 0.25" gltf-model="%PUBLIC_URL%/untitled.glb" modify-materials look-at="[gps-camera]"
-      gps-entity-place="latitude: 51.93354636; longitude: 6.65203426;"></a-entity>
-  
-      <a-camera gps-camera rotation-reader></a-camera>
-    </a-scene>
-
+    <div id="ar-root"></div>
     <div id="root"></div>
-
-
   </body>
 </html>
